Closed Bug 962881 Opened 10 years ago Closed 10 years ago

Regression in Scrolling in the Email App w/ APZ on

Categories

(Core :: Panning and Zooming, defect, P1)

x86
macOS
defect

Tracking

()

RESOLVED FIXED
mozilla29
blocking-b2g 1.3+
Tracking Status
firefox27 --- unaffected
firefox28 --- fixed
firefox29 --- fixed
b2g-v1.2 --- unaffected
b2g-v1.3 --- fixed
b2g-v1.3T --- fixed
b2g-v1.4 --- fixed

People

(Reporter: mchang, Assigned: mchang)

References

Details

(Keywords: perf, regression, Whiteboard: [c=handeye p=3 s= u=1.3])

Attachments

(3 files)

Scrolling in the Email app has no inertial scrolling with the latest gecko revision. This is a regression in Gecko. This affects all parts of the email app, including scrolling through folders. This doesn't seem to effect any other gaia app. 

Details:
1) APZ + HWC is enabled.
2) Gaia Rev - 2162b4a, v1.3 b1e8602 - Occurs on both.

Good Gecko Rev:
changeset:   164407:d8f0dc811109
tag:         tip
user:        Richard Newman <rnewman@mozilla.com>
date:        Tue Jan 21 08:23:43 2014 -0800
summary:     No bug: the OVERRIDE HOOK is stupid.

Bad Gecko Rev:
changeset:   164725:cad591993bfa
tag:         tip
parent:      164702:66bd9fa91eff
parent:      164724:385ed622a7da
user:        Ryan VanderMeulen <ryanvm@gmail.com>
date:        Wed Jan 22 15:32:22 2014 -0500
summary:     Merge fx-team to m-c.
Attached video Video of Scrolling
Summary: Regression in Scrolling in the Email App Regressed w/ APZ on → Regression in Scrolling in the Email App w/ APZ on
Keywords: regression
Whiteboard: [c=handeye p=5 s= u=] → [c=handeye p=3 s= u=]
Target Milestone: --- → 1.3 C3/1.4 S3(31jan)
Doug might be able to help with this.
Started bisecting. Thanks for the contact @gal.

Doug, if you have any thoughts on what changed in the past day, I'd appreciate it. Thanks!
Flags: needinfo?(bugzilla)
Just finished bisecting, the bad commit is:

changeset:   164587:28f8657d36e9
user:        Benoit Girard <bgirard@mozilla.com>
date:        Tue Jan 21 12:33:52 2014 -0500
summary:     Bug 950488 - Overhaul APZ handling of overflow:hidden. r=botond


Benwa: Is it possible to change a few email CSS properties or do we need to back the change out? Thanks!
Flags: needinfo?(bugzilla) → needinfo?(bgirard)
Blocks: 950488
Component: Graphics → Panning and Zooming
I've traced the problem to here:
http://mxr.mozilla.org/mozilla-central/source/gfx/layers/ipc/Axis.cpp#140

I'm not sure yet why we're getting axis locked on a regular scrollable frame. Looking more into it.
I've traced it further to here:
http://mxr.mozilla.org/mozilla-central/source/gfx/layers/ipc/Axis.cpp#145

And then to here:
http://mxr.mozilla.org/mozilla-central/source/layout/base/nsDisplayList.cpp#625

It seems that the scrollbar styles are being misreported, or something like that. Here's the relevant code in Gaia:
https://github.com/mozilla-b2g/gaia/blob/9fba58cd97022041dd804961c8587a8f45950e63/apps/email/style/message_cards.css#L9

Commenting out this line fixes the issue O.o
(In reply to Mason Chang [:mchang] from comment #4)
> Just finished bisecting, the bad commit is:
> 
> changeset:   164587:28f8657d36e9
> user:        Benoit Girard <bgirard@mozilla.com>
> date:        Tue Jan 21 12:33:52 2014 -0500
> summary:     Bug 950488 - Overhaul APZ handling of overflow:hidden. r=botond
> 
> 
> Benwa: Is it possible to change a few email CSS properties or do we need to
> back the change out? Thanks!

There is a bug in this patch: on this line [1], we are passing a flag that pertains to the x axis, to a function that deals with the y axis. In this case the element is overflow-x:hidden, and this is preventing the y axis from scrolling.

[1] http://mxr.mozilla.org/mozilla-central/source/gfx/layers/ipc/AsyncPanZoomController.cpp#1231
Flags: needinfo?(bgirard)
Attached patch Fix typoSplinter Review
Assignee: mchang → bgirard
Attachment #8364428 - Flags: review?(botond)
Actually assigning back to mchang since he did all the heavy lifting here :)
Assignee: bgirard → mchang
Attachment #8364428 - Flags: review?(botond) → review+
Patch is in my outgoing queue but tree is closed.
This will need uplifting to aurora as well.
blocking-b2g: --- → 1.3?
blocking-b2g: 1.3? → 1.3+
Whiteboard: [c=handeye p=3 s= u=] → [c=handeye p=3 s= u=1.3]
https://hg.mozilla.org/mozilla-central/rev/c2029fa25945
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: 1.3 C3/1.4 S3(31jan) → mozilla29
(In reply to Ryan VanderMeulen [:RyanVM UTC-5] from comment #15)
> https://hg.mozilla.org/releases/mozilla-aurora/rev/573b19cdae30

Thanks for uplifting this and the previous bug Ryan :)
kevin, is this something you could verify or pass on to someone who's set up for FirefoxOS testing? Thanks!
Flags: needinfo?(kbrosnan)
Flags: needinfo?(kbrosnan)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: