Bug 962881 - Fix regression to y scrolling with x overflow:hidden. r=botond, a=1.3+